--- a/resources/config.yml
+++ b/resources/config.yml
@@ -2,14 +2,19 @@
 #              >>>>>>>>>>>>>>>>>>>>>>>>>
 #                Fqstalph
 #                         Twitter: @fqstalph
-#                 Website: laststyle.tk
+#                 Website: github.com/Fqstalph
 #               >>>>>>>>>>>>>>>>>>>>>>>>>
+
+# Messages
+JoinMessage: "§a+ {player}"
+QuitMessage: "§c- {player}"
+
+# Items 
 ItemName: "§aItem"
 Item1-Command: "help"
-#
+
 ItemName2: "Item2"
 Item2-Command: "help"
-#
+
 ItemName3: "Item3"
 Item3-Command: "help"
-
